; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/xen/xenstore/extr_xenstore.c_xs_transaction_end.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/xen/xenstore/extr_xenstore.c_xs_transaction_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xs_transaction = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"F\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"T\00", align 1
@XS_TRANSACTION_END = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xs_transaction_end(i32 %0, i32 %1) #0 {
  %3 = alloca %struct.xs_transaction, align 4
  %4 = alloca i32, align 4
  %5 = alloca [2 x i8], align 1
  %6 = getelementptr inbounds %struct.xs_transaction, %struct.xs_transaction* %3, i32 0, i32 0
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = getelementptr inbounds [2 x i8], [2 x i8]* %5, i64 0, i64 0
  %11 = call i32 @strcpy(i8* %10, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %15

12:                                               ; preds = %2
  %13 = getelementptr inbounds [2 x i8], [2 x i8]* %5, i64 0, i64 0
  %14 = call i32 @strcpy(i8* %13, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %15

15:                                               ; preds = %12, %9
  %16 = load i32, i32* @XS_TRANSACTION_END, align 4
  %17 = getelementptr inbounds [2 x i8], [2 x i8]* %5, i64 0, i64 0
  %18 = getelementptr inbounds %struct.xs_transaction, %struct.xs_transaction* %3, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @xs_single(i32 %19, i32 %16, i8* %17, i32* null, i32* null)
  ret i32 %20
}

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @xs_single(i32, i32, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
